--- a/elements.html
+++ b/elements.html
@@ -111,10 +111,10 @@
 
 										<!-- Certificate 1 -->
 										<div>
-										<a href="certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
-											<img src="certificates/Deloitte_Data_Analyst_Puneet.png" alt="Certificate 1" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+											<img src="Certificates/Deloitte_Data_Analyst_Puneet.png" alt="Certificate 1" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Deloitte Data Analyst Certficate</b></p>
 										</a>
 
@@ -122,50 +122,50 @@
 
 										<!-- Certificate 2 -->
 										<div>
-										<a href="certificates/cert2.pdf" target="_blank">
-											<img src="certificates/cert2.png" alt="Certificate 2" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/cert2.pdf" target="_blank">
+											<img src="Certificates/cert2.png" alt="Certificate 2" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Scaler SQL Bootcamp Certificate</b></p>
 										</a>
 										</div>
 
 										<!-- Certificate 3 -->
 										<div>
-										<a href="certificates/cert3.pdf" target="_blank">
-											<img src="certificates/cert3.png" alt="Certificate 3" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/cert3.pdf" target="_blank">
+											<img src="Certificates/cert3.png" alt="Certificate 3" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Data Analyst Bootcamp Certificate</b></p>
 										</a>
 										</div>
 
 										<!-- Certificate 4 -->
 										<div>
-										<a href="certificates/NPTEL_IoT.pdf" target="_blank">
-											<img src="certificates/NPTEL_IoT.jpg" alt="Certificate 4" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/NPTEL_IoT.pdf" target="_blank">
+											<img src="Certificates/NPTEL_IoT.jpg" alt="Certificate 4" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/NPTEL_IoT.pdf" target="_blank">
+										<a href="Certificates/NPTEL_IoT.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Internet of Things Certification<br>NPTEL </b></p>
 										</a>
 										</div>
 
 										<!-- Certificate 5 -->
 										<div>
-										<a href="certificates/NPTEL_SoftSkills.pdf" target="_blank">
-											<img src="certificates/NPTEL_SoftSkills.png" alt="Certificate 5" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/NPTEL_SoftSkills.pdf" target="_blank">
+											<img src="Certificates/NPTEL_SoftSkills.png" alt="Certificate 5" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/NPTEL_SoftSkills.pdf" target="_blank">
+										<a href="Certificates/NPTEL_SoftSkills.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Soft skills Certification - NPTEL</b></p>
 										</a>
 										</div>
 
 										<!-- Certificate 6 -->
 										<div>
-										<a href="certificates/NPTEL_Leadership.pdf" target="_blank">
-											<img src="certificates/NPTEL_Leadership.png" alt="Certificate 5" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/NPTEL_Leadership.pdf" target="_blank">
+											<img src="Certificates/NPTEL_Leadership.png" alt="Certificate 5" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="certificates/NPTEL_Leadership.pdf" target="_blank">
+										<a href="Certificates/NPTEL_Leadership.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Leadership & Team Effectiveness Certification - NPTEL</b></p>
 										</a>
 										</div>
@@ -186,11 +186,11 @@
 
 										<!-- Offer Letter Image & PDF -->
 										<div style="text-align: center; margin-top: 20px;">
-										<a href="internship/Puneet internship letter.pdf" target="_blank">
-											<img src="internship/Puneet internship letter.png" alt="Internship Offer Letter" style="width: 100%; max-width: 500px; border-radius: 8px; box-shadow: 0 0 12px rgba(0,0,0,0.1);">
+										<a href="Internship/Puneet internship letter.pdf" target="_blank">
+											<img src="Internship/Puneet internship letter.png" alt="Internship Offer Letter" style="width: 100%; max-width: 500px; border-radius: 8px; box-shadow: 0 0 12px rgba(0,0,0,0.1);">
 										</a>
 										<p style="margin-top: 10px;">
-											<a href="internship/Puneet internship letter.pdf" download style="text-decoration: none;">
+											<a href="Internship/Puneet internship letter.pdf" download style="text-decoration: none;">
 											<button style="
 												padding: px 20px;
 												font-size: 14px;
@@ -251,4 +251,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
