--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Puneet Portfolio Website</title>
@@ -106,13 +101,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Sales Dashboard Analysis<br />
+										<h2><a href="https://github.com/Puneet140/Sales-Dashboard-Excel" target="_blank" rel="noopener noreferrer">Sales Dashboard Analysis<br />
 										EXCEL</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/sales.jpg" alt="" /></a>
+									<a href="https://github.com/Puneet140/Sales-Dashboard-Excel" target="_blank" rel="noopener noreferrer" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>This project involves building an interactive Sales Dashboard in Excel that helps visualize and analyze key performance metrics such as revenue, profit, orders, and regional performance.The dashboard enables business users to quickly identify trends, top-performing categories, and areas needing attention.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/Puneet140/Sales-Dashboard-Excel" target="_blank" rel="noopener noreferrer" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -184,4 +179,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
