--- a/generic.html
+++ b/generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>BIO</title>
+		<title>Puneet-BIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -113,3 +113,4 @@
 	</body>
 
 </html>
+
