--- a/generic.html
+++ b/generic.html
@@ -61,7 +61,10 @@
 
 								💻 <b>Development Tools:-<br></b>
 								Jupyter Notebook: Interactive coding and data exploration<br>
-								VS Code: Code editor for Python and project development</p>
+								VS Code: Code editor for Python and project development<br>
+								Anaconda: Python distributions used for managing environments and packages, Anaconda includes preinstalled tools
+								Miniconda: Python distributions used for managing environments and packages,Miniconda is a minimal installer offering greater control
+							</p>
 							</section>
 
 					</div>
