--- a/generic.html
+++ b/generic.html
@@ -60,10 +60,10 @@
 								SQL: Data retrieval, filtering, joins, aggregations<br>
 
 								💻 <b>Development Tools:-<br></b>
-								Jupyter Notebook: Interactive coding and data exploration<br>
-								VS Code: Code editor for Python and project development<br>
-								Anaconda: Python distributions used for managing environments and packages, Anaconda includes preinstalled tools
-								Miniconda: Python distributions used for managing environments and packages,Miniconda is a minimal installer offering greater control
+								Jupyter Notebook: Interactive coding and data exploration.<br>
+								VS Code: Code editor for Python and project development.<br>
+								Anaconda: Python distributions used for managing environments and packages, Anaconda includes preinstalled tools.<br>
+								Miniconda: Python distributions used for managing environments and packages,Miniconda is a minimal installer offering greater control.
 							</p>
 							</section>
 
@@ -116,4 +116,5 @@
 	</body>
 
 </html>
+
 
