--- a/elements.html
+++ b/elements.html
@@ -117,10 +117,10 @@
 
 										<!-- Certificate 2 -->
 										<div>
-										<a href="Certificates/cert2.pdf" target="_blank">
-											<img src="Certificates/cert2.png" alt="Certificate 2" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/SQL Basics - Scaler Certfication Puneet.pdf" target="_blank">
+											<img src="Certificates/SQL Basics - Scaler.png" alt="Certificate 2" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+										<a href="Certificates/SQL Basics - Scaler Certfication Puneet.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Scaler SQL Bootcamp Certificate</b></p>
 										</a>
 										</div>
@@ -248,4 +248,5 @@
 	</body>
 
 </html>
+
 
