--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
-							<article class="post featured">
+						<article class="post featured">
 								<header class="major">
 									<h2><a href="https://github.com/Puneet140/housing-data-cleaning/blob/main/housing_cleaning.sql" target="_blank" rel="noopener noreferrer">Data Cleaning in SQL<br />
 									</a></h2>
@@ -55,6 +55,22 @@
 										Cleaned and prepared raw housing estate data using SQL in MySQL Workbench to ensure accuracy, 
 										consistency, and readiness for analysis. Addressed issues like null values, inconsistent formats, 
 										duplicates, and invalid entries through structured SQL queries.
+										 
+									</p>
+								</header>
+								<a href="https://github.com/Puneet140/housing-data-cleaning/blob/main/housing_cleaning.sql" target="_blank" rel="noopener noreferrer" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/Puneet140/housing-data-cleaning/blob/main/housing_cleaning.sql" target="_blank" rel="noopener noreferrer" class="button large">View Project</a></li>
+								</ul>
+							</article>
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="https://github.com/Puneet140/blinkit-Dashboard" target="_blank" rel="noopener noreferrer">blinkit Dashboard PowerBI<br />
+									</a></h2>
+									<p>
+										An interactive Power BI dashboard showcasing Blinkit’s $1.20M total sales, product performance,
+										and outlet analysis. It highlights trends by item type, fat content, outlet size, and location tiers, 
+										with dynamic filters for deeper insights.
 										 
 									</p>
 								</header>
@@ -181,3 +197,4 @@
 	</body>
 
 </html>
+
