--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 										 
 									</p>
 								</header>
-								<a href="https://github.com/Puneet140/housing-data-cleaning/blob/main/housing_cleaning.sql" target="_blank" rel="noopener noreferrer" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/Puneet140/blinkit-Dashboard" target="_blank" rel="noopener noreferrer" class="image main"><img src="images/blinkit.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Puneet140/housing-data-cleaning/blob/main/housing_cleaning.sql" target="_blank" rel="noopener noreferrer" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Puneet140/blinkit-Dashboard" target="_blank" rel="noopener noreferrer" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -197,4 +197,5 @@
 	</body>
 
 </html>
+
 
