--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<h4 class="datahead">Data Analyst | Storyteller with Data | Power BI Enthusiast</h4>
 						<p>
  						I turn raw data into meaningful insights that drive better decisions.
-						From interactive dashboards to deep-dive analyses, I specialize in uncovering the stories hidden in numbers — using tools like Power BI, Excel, and Python.<a href="https://twitter.com/ajlkn">@Puneet</a> </p>
+						From interactive dashboards to deep-dive analyses, I specialize in uncovering the stories hidden in numbers — using tools like Power BI, Excel, and Python.<a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/">@Puneet</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -38,7 +38,7 @@
 							<li><a href="elements.html">Resume & Certifications</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/Puneet140" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -171,7 +171,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/Puneet140 " target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
@@ -197,5 +197,6 @@
 	</body>
 
 </html>
+
 
 
