--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 							<li><a href="elements.html">Resume & Certifications</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="https://github.com/Puneet140" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -90,7 +90,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/puneet-chauhan-581bb2324/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="https://github.com/Puneet140" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
@@ -116,6 +116,7 @@
 	</body>
 
 </html>
+
 
 
 
