--- a/elements.html
+++ b/elements.html
@@ -127,10 +127,10 @@
 
 										<!-- Certificate 3 -->
 										<div>
-										<a href="Certificates/cert3.pdf" target="_blank">
-											<img src="Certificates/cert3.png" alt="Certificate 3" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+										<a href="Certificates/Data Analyst Bootcamp Certificate.pdf" target="_blank">
+											<img src="Certificates/Data Analytics Bootcamp Certification of Completion.png" alt="Certificate 3" style="width: 100%; max-width: 300px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 										</a>
-										<a href="Certificates/Deloitte_Data_Analyst_Puneet.pdf" target="_blank">
+										<a href="Certificates/Data Analyst Bootcamp Certificate.pdf" target="_blank">
 											<p><b style="margin-top: 10px; font-size: 15px; color: #444;">Data Analyst Bootcamp Certificate</b></p>
 										</a>
 										</div>
@@ -248,6 +248,7 @@
 	</body>
 
 </html>
+
 
 
 
